k8s/java-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-consumer
  namespace: trabajos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-consumer
  template:
    metadata:
      labels:
        app: java-consumer
    spec:
      containers:
        - name: java-consumer
          image: trabajos-java-consumer:local
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 512Mi
